update description for Telford Longue chair with detailed features and benefits

--- a/Modern Chair/index.html
+++ b/Modern Chair/index.html
@@ -27,8 +27,9 @@
 					<label for="desc2">Details</label>
 					<div class="sectionFluid descSec accor1">
 						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam tempora enim officia
-							veritatis hic.
+							Modern chair with a minimalist design. The Telford Longue is a comfortable and stylish chair that will
+							look great in any room. The chair is made from high-quality materials and is built to last. The
+							Telford Longue is perfect for relaxing in after a long day at work or for curling up with a good book.
 						</p>
 					</div>
 					<div class="sectionFluid descSec accor2">
