--- a/Shop WebSite/index.html
+++ b/Shop WebSite/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="container" class="header1">
+    <div class="container header1">
       <h1>Shiv Consultancy Services</h1>
       <nav>
         <ul>
@@ -172,9 +172,9 @@
       <h2>Contact Us</h2>
       <div class="contact-info">
         <p><i class="fas fa-map-marker-alt"></i> Nr.Jodhpur Naka, Jam Khambhalia, Gujrat, 361305</p>
-        <p><i class="fas fa-phone"></i> +91 9016785573</p>
-        <p><i class="fas fa-phone"></i> +91 9909879800</p>
-        <p><i class="fas fa-envelope"></i> bhaya1970@gmail.com</p>
+        <p><i class="fas fa-phone"></i> +91 90167 85573</p>
+        <p><i class="fas fa-phone"></i> +91 99098 79800</p>
+        <p><i class="fas fa-envelope"></i> <a href="mailto:bhaya1970@gmail.com">bhaya1970@gmail.com</a></p>
       </div>
       <form>
         <input type="text" placeholder="Your Name" required>
@@ -192,6 +192,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
 </body>
+<script src="script.js"></script>
 </html>
