enhance index.html and styles.css with new sections, improved headings, and updated contact information

--- a/Shop WebSite/index.html
+++ b/Shop WebSite/index.html
@@ -17,8 +17,9 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#reviews">Reviews</a></li>
-          <li><a href="#documents">Document Checklist</a></li>
+          <li><a href="#documents">Documents</a></li>
           <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#our-location">Our Location</a></li>
         </ul>
       </nav>
     </div>
@@ -36,7 +37,7 @@
   <!-- Services Section -->
   <section id="services" class="section">
     <div class="container">
-      <h2>Our Services</h2>
+      <h2 class="con-head">Our Services</h2>
       <div class="services-grid">
         <div class="service">
           <i class="fas fa-car"></i>
@@ -109,7 +110,7 @@
   <!-- Reviews Section -->
   <section id="reviews" class="section">
     <div class="container">
-      <h2>What Our Customers Say</h2>
+      <h2 class="con-head">What Our Customers Say</h2>
       <div class="reviews-grid">
         <div class="review">
           <p>"Shiv Consultancy Services made the process of transferring my vehicle ownership so easy. Highly recommended!"</p>
@@ -130,51 +131,66 @@
   <!-- Document Checklist Section -->
   <section id="documents" class="section">
     <div class="container">
-      <h2>Document Checklist</h2>
+      <h2 class="con-head">Document Checklist</h2>
       <div class="documents-list">
         <div class="accordion">
           <button class="accordion-btn">Vehicle Registration <i class="fas fa-chevron-down"></i></button>
           <div class="accordion-content">
-            <ul>
-              <li>Document 1</li>
-              <li>Document 2</li>
-              <li>Document 3</li>
-            </ul>
+            <ol>
+              <li>Identity proof with photographs of applicant</li>
+              <li>Vehicle insurance certificate.</li>
+              <li>Sale Certificate in Form No.21</li>
+            </ol>
           </div>
         </div>
         <div class="accordion">
           <button class="accordion-btn">Driving License <i class="fas fa-chevron-down"></i></button>
           <div class="accordion-content">
-            <ul>
-              <li>Document 1</li>
-              <li>Document 2</li>
-              <li>Document 3</li>
-            </ul>
+            <ol>
+              <li>School Leaving Certificate</li>
+              <li>Aadhar Card</li>
+              <li>Passport sized photographs</li>
+          </ol>
           </div>
         </div>
         <div class="accordion">
           <button class="accordion-btn">Transfer of Ownership <i class="fas fa-chevron-down"></i></button>
           <div class="accordion-content">
-            <ul>
-              <li>Document 1</li>
-              <li>Document 2</li>
-              <li>Document 3</li>
-            </ul>
+            <ol>
+              <li>Registration Certificate(R,C)</li>
+              <li>Aadhar Card of Seller & Purchaser </li>
+              <li>Passport size photographs</li>
+              <li>Certificate of Insurance</li>
+              <li>PUC Certificate</li>
+
+            </ol>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+    <!-- Our Location Section -->
+<section id="our-location" class="section">
+  <div class="container">
+    <p class="map-text">Our Location</p>
+    <div class="box">
+      
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d230.87117789563518!2d69.65412778285751!3d22.20443022462492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1740062657701!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+   
+  </div>
+</section>
+
   <!-- Contact Section -->
   <section id="contact" class="section">
     <div class="container">
-      <h2>Contact Us</h2>
+      <h1 class="con-head">Contact Us</h1>
       <div class="contact-info">
-        <p><i class="fas fa-map-marker-alt"></i> Nr.Jodhpur Naka, Jam Khambhalia, Gujrat, 361305</p>
-        <p><i class="fas fa-phone"></i> +91 90167 85573</p>
-        <p><i class="fas fa-phone"></i> +91 99098 79800</p>
-        <p><i class="fas fa-envelope"></i> <a href="mailto:bhaya1970@gmail.com">bhaya1970@gmail.com</a></p>
+        <p><i class="fas fa-map-marker-alt"></i> <a href="https://maps.app.goo.gl/YpXZZGe7pcfcqQWC6" target="_blank">Nr.Jodhpur Naka, Jam Khambhalia, Gujrat, 361305</a></p>
+        <p><i class="fas fa-phone"></i><a href="tel:+919016785573"> Bhaya Nandaniya</a></p>
+        <p><i class="fas fa-phone"></i><a href="tel:+919909879800"> Parbat Chavda</a></p>
+        <p><i class="fas fa-envelope"></i> <a id="email" href="mailto:bhaya1970@gmail.com">bhaya1970@gmail.com</a></p>
       </div>
       <form>
         <input type="text" placeholder="Your Name" required>
@@ -184,6 +200,8 @@
       </form>
     </div>
   </section>
+
+
 
   <!-- Footer -->
   <footer>
