--- a/Shop WebSite/index.html
+++ b/Shop WebSite/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+   <!-- Google Translate Widget -->
+   <div id="google_translate_element" style="text-align: right; margin: 10px;"></div>
+
+   <script type="text/javascript">
+       function googleTranslateElementInit() {
+           new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'en,gu', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+       }
+   </script>
+   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+ 
   <!-- Header -->
   <header>
     <div class="container header1">
@@ -206,7 +216,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2023 Shiv Consultancy Services. All rights reserved.</p>
+      <p>&copy; 2016 Shiv Consultancy Services. All rights reserved.</p>
     </div>
   </footer>
 
